--- a/AiDiDesign/AiDiDesign.Web/AiDiDesign.Web.csproj
+++ b/AiDiDesign/AiDiDesign.Web/AiDiDesign.Web.csproj
@@ -165,7 +165,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -241,6 +240,10 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AiDiDesign.Data\AiDiDesign.Data.csproj">
+      <Project>{f06d04da-040d-456a-bcc0-c5470261177e}</Project>
+      <Name>AiDiDesign.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AiDiDesign.Modelsl\AiDiDesign.Models.csproj">
       <Project>{3bd35efa-b3ff-4e70-b70b-a4c6b80286c6}</Project>
       <Name>AiDiDesign.Models</Name>
