--- a/AiDiDesign/AiDiDesign.Web/Web.config
+++ b/AiDiDesign/AiDiDesign.Web/Web.config
@@ -8,10 +8,6 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-AiDiDesign.Web-20141113100415.mdf;Initial Catalog=aspnet-AiDiDesign.Web-20141113100415;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -56,6 +52,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="AiDiDesign" connectionString="Data Source=.;Initial Catalog=AiDiDesign;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
