--- a/AiDiDesign/AiDiDesign.Web/AiDiDesign.Web.csproj
+++ b/AiDiDesign/AiDiDesign.Web/AiDiDesign.Web.csproj
@@ -172,12 +172,48 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Other\header.css" />
+    <Content Include="Content\Other\font-awesome\css\font-awesome.css" />
+    <Content Include="Content\Other\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Content\Other\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\Other\homePage.css" />
+    <Content Include="Content\Other\main.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\Other\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\Other\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\Other\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\Other\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Content\Other\font-awesome\less\bordered-pulled.less" />
+    <Content Include="Content\Other\font-awesome\less\core.less" />
+    <Content Include="Content\Other\font-awesome\less\fixed-width.less" />
+    <Content Include="Content\Other\font-awesome\less\font-awesome.less" />
+    <Content Include="Content\Other\font-awesome\less\icons.less" />
+    <Content Include="Content\Other\font-awesome\less\larger.less" />
+    <Content Include="Content\Other\font-awesome\less\list.less" />
+    <Content Include="Content\Other\font-awesome\less\mixins.less" />
+    <Content Include="Content\Other\font-awesome\less\path.less" />
+    <Content Include="Content\Other\font-awesome\less\rotated-flipped.less" />
+    <Content Include="Content\Other\font-awesome\less\spinning.less" />
+    <Content Include="Content\Other\font-awesome\less\stacked.less" />
+    <Content Include="Content\Other\font-awesome\less\variables.less" />
+    <Content Include="Content\Other\font-awesome\scss\font-awesome.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_bordered-pulled.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_core.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_fixed-width.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_icons.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_larger.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_list.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_mixins.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_path.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_rotated-flipped.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_spinning.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_stacked.scss" />
+    <Content Include="Content\Other\font-awesome\scss\_variables.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -186,7 +222,13 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Other\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\Other\main.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\Other\header.js" />
+    <Content Include="Scripts\Other\homePage.js" />
+    <Content Include="Scripts\Other\jquery-1.8.2.min.js" />
+    <Content Include="Scripts\Other\jquery.backstretch.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
