--- a/AiDiDesign/Data/AiDiDesign.Data.Models/AiDiDesign.Data.Models.csproj
+++ b/AiDiDesign/Data/AiDiDesign.Data.Models/AiDiDesign.Data.Models.csproj
@@ -52,12 +52,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Basket.cs" />
+    <Compile Include="Furniture.cs" />
+    <Compile Include="FurnitureType.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AiDiDesign.Data.Common\AiDiDesign.Data.Common.csproj">
+      <Project>{bc28a77a-d70c-4bb1-83fa-20a31d38c9b3}</Project>
+      <Name>AiDiDesign.Data.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
