--- a/AiDiDesign/Data/AiDiDesign.Data/AiDiDesign.Data.csproj
+++ b/AiDiDesign/Data/AiDiDesign.Data/AiDiDesign.Data.csproj
@@ -56,6 +56,10 @@
     <Compile Include="IAiDiDesignDbContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DeletableEntityRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IDeletableEntityRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
