--- a/AiDiDesign/Data/AiDiDesign.Data.Common/AiDiDesign.Data.Common.csproj
+++ b/AiDiDesign/Data/AiDiDesign.Data.Common/AiDiDesign.Data.Common.csproj
@@ -51,6 +51,10 @@
     <Compile Include="Models\IAuditInfo.cs" />
     <Compile Include="Models\IDeletableEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DeletableEntityRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IDeletableEntityRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
