--- a/AiDiDesign/Web/AiDiDesign.Web/AiDiDesign.Web.csproj
+++ b/AiDiDesign/Web/AiDiDesign.Web/AiDiDesign.Web.csproj
@@ -43,6 +43,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper">
+      <HintPath>..\..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4">
+      <HintPath>..\..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -277,6 +283,10 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\AiDiDesign.Web.Infrastructure\AiDiDesign.Web.Infrastructure.csproj">
+      <Project>{c11bca6c-b79b-4229-9286-a01d7d7f2d72}</Project>
+      <Name>AiDiDesign.Web.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Common\AiDiDesign.Common\AiDiDesign.Common.csproj">
       <Project>{357e2038-ca40-4758-a3b8-6d92a0d2118d}</Project>
       <Name>AiDiDesign.Common</Name>
