Index page created

--- a/AiDiDesign/Data/AiDiDesign.Data.Models/AiDiDesign.Data.Models.csproj
+++ b/AiDiDesign/Data/AiDiDesign.Data.Models/AiDiDesign.Data.Models.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basket.cs" />
+    <Compile Include="FirstPageText.cs" />
     <Compile Include="Furniture.cs" />
     <Compile Include="FurnitureType.cs" />
     <Compile Include="Order.cs" />
