--- a/AiDiDesign/Web/AiDiDesign.Web/packages.config
+++ b/AiDiDesign/Web/AiDiDesign.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
@@ -32,7 +33,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
-  <package id="Twitter.Bootstrap.Bootswatch.Superhero" version="3.2.0.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Bootswatch.Darkly" version="3.2.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
