--- a/AiDiDesign/Web/AiDiDesign.Web/AiDiDesign.Web.csproj
+++ b/AiDiDesign/Web/AiDiDesign.Web/AiDiDesign.Web.csproj
@@ -194,6 +194,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -206,6 +207,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\PictureViewModel.cs" />
+    <Compile Include="ViewModels\ProductFurnitureTypeViewModel.cs" />
     <Compile Include="ViewModels\ProductHomeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -215,8 +217,6 @@
     <Content Include="Content\bootstrap.darkly.css" />
     <Content Include="Content\bootstrap.darkly.min.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\bootstrap.superhero.css" />
-    <Content Include="Content\bootstrap.superhero.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="favicon.ico" />
@@ -296,9 +296,14 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_ProductPartial.cshtml" />
     <Content Include="Views\Shared\_RightSideBar.cshtml" />
+    <Content Include="Views\Gallery\Create.cshtml" />
+    <Content Include="Views\Gallery\Delete.cshtml" />
+    <Content Include="Views\Gallery\Details.cshtml" />
+    <Content Include="Views\Gallery\Edit.cshtml" />
+    <Content Include="Views\Gallery\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\uploads\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
